--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -131,6 +131,10 @@ jobs:
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
+        echo '---------------------------------dl---------------------------------------'
+        ls -al ./dl/
+        echo '---------------------------------dl---------------------------------------'
+
 
     - name: Compile the firmware
       id: compile
