--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -99,6 +99,9 @@ jobs:
         echo "-----------------------------------------------------------------------------"
         which node
         which npm
+        node -v
+        npm -v 
+        npm install semver
         echo "-----------------------------------------------------------------------------"
 
     - name: Clone source code
