--- a/.config
+++ b/.config
@@ -186,7 +186,8 @@ CONFIG_SING_BOX_WITH_QUIC=y
 CONFIG_SING_BOX_WITH_UTLS=y
 CONFIG_SING_BOX_WITH_WIREGUARD=y
 CONFIG_TARGET_ROOTFS_PARTSIZE=10240
-CONFIG_VMDK_IMAGES=y
+# CONFIG_VMDK_IMAGES is not set 
+# CONFIG_TARGET_ROOTFS_SEPARATE is not set
 # CONFIG_PACKAGE_boost is not set
 # CONFIG_PACKAGE_libcares is not set
 # CONFIG_PACKAGE_libev is not set
