Fix indentation for build job in workflow file

--- a/.github/workflows/builder-self.yml
+++ b/.github/workflows/builder-self.yml
@@ -29,10 +29,11 @@ env:
   TZ: Asia/Shanghai
 
 jobs:
-runs-on:
-  - self-hosted
-  - linux
-  - ubuntu-22.04
+  build:
+    runs-on:
+      - self-hosted
+      - linux
+      - ubuntu-22.04
 
     steps:
 
