--- a/.github/workflows/builder-self.yml
+++ b/.github/workflows/builder-self.yml
@@ -58,7 +58,7 @@ jobs:
         which npm
         node -v
         npm -v 
-        sudo chown -R 1001:128 "/home/runner/.npm"
+        #sudo chown -R 1001:128 "/home/runner/.npm"
         npm install semver
         echo "-----------------------------------------------------------------------------"
 
